test/spec_vectors/simd_splat/fail/module_22.wat
(module (func $i16x8.splat-arg-empty (result v128) (i16x8.splat)))